# forge-dashboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/forge_dashboard/: config.py  main.py
backend/forge_dashboard/platform/: event_journal.py  flow_tracker.py  operation_log.py  state_store.py
backend/forge_dashboard/plugin_sdk/: __init__.py  models.py  protocol.py  registry.py
backend/forge_dashboard/routers/: __init__.py  components.py  operations.py  overview.py  pipeline.py  ws.py
backend/forge_dashboard/services/: aggregator.py  event_bus.py
backend/tests/: conftest.py  test_aggregator.py  test_app.py  test_event_bus.py  test_event_journal.py  test_flow_tracker.py  test_models.py  test_operation_log.py  test_registry.py  test_routers.py  test_state_store.py  test_ws.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/__tests__/: HealthCard.test.tsx  Overview.test.tsx  dashboard-store.test.ts
frontend/src/components/: ArtifactViewer.tsx  EventFeed.tsx  HealthCard.tsx  PipelineGraph.tsx  StageProgress.tsx
frontend/src/hooks/: useApi.ts  useWebSocket.ts
frontend/src/pages/: ComponentDetail.tsx  Overview.tsx  PipelineFlow.tsx  RunDetail.tsx
frontend/src/store/: dashboard.ts
plugins/forge-dashboard-bulwark/: pyproject.toml
plugins/forge-dashboard-bulwark/forge_dashboard_bulwark/: __init__.py  plugin.py
plugins/forge-dashboard-bulwark/tests/: test_plugin.py
plugins/forge-dashboard-cartographer/: pyproject.toml
plugins/forge-dashboard-cartographer/forge_dashboard_cartographer/: __init__.py  plugin.py
plugins/forge-dashboard-cartographer/tests/: test_plugin.py
plugins/forge-dashboard-crossfire/: pyproject.toml
plugins/forge-dashboard-crossfire/forge_dashboard_crossfire/: __init__.py  plugin.py
plugins/forge-dashboard-crossfire/tests/: test_plugin.py
plugins/forge-dashboard-crucible/: pyproject.toml
plugins/forge-dashboard-crucible/forge_dashboard_crucible/: __init__.py  plugin.py
plugins/forge-dashboard-crucible/tests/: test_plugin.py
