[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-dashboard"
version = "0.1.0"
description = "Unified management console for the Forge Platform ecosystem"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["forge_dashboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
