[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-dashboard-cartographer"
version = "0.1.0"
description = "Cartographer plugin for Forge Dashboard"
requires-python = ">=3.11"
dependencies = ["forge-dashboard"]

[project.entry-points."forge_dashboard.plugins"]
cartographer = "forge_dashboard_cartographer:CartographerPlugin"

[tool.hatch.build.targets.wheel]
packages = ["forge_dashboard_cartographer"]
