[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-dashboard-crossfire"
version = "0.1.0"
description = "Crossfire plugin for Forge Dashboard"
requires-python = ">=3.11"
dependencies = ["forge-dashboard"]

[project.entry-points."forge_dashboard.plugins"]
crossfire = "forge_dashboard_crossfire:CrossfirePlugin"

[tool.hatch.build.targets.wheel]
packages = ["forge_dashboard_crossfire"]
